fix error-prone warnings